[project]
name = "q-learning-maze-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack Kelly",email = "jk921@cam.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "imageio (>=2.37.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]

[tool.poetry]
packages = [{ include = "q_learning_maze_project" }]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
